# parcl-crawler

./: .env.example  .gitignore  README.md  SOURCE_CATALOG.md  pyproject.toml
config/: settings.yaml
config/sources/: arcgis_austin_energy_service.yaml  arcgis_austin_school_zones.yaml  arcgis_city_owned_land.yaml  arcgis_council_districts.yaml  arcgis_easements.yaml  arcgis_epa_brownfields.yaml  arcgis_fema_flood_national.yaml  arcgis_parks_austin.yaml  arcgis_parks_travis.yaml  arcgis_tceq_lpst.yaml  arcgis_transit_bus_routes.yaml  arcgis_transit_bus_stops.yaml  arcgis_transit_rapid_routes.yaml  arcgis_transit_rapid_stops.yaml  arcgis_travis_flood_zone.yaml  arcgis_water_impact_fee.yaml  arcgis_water_muds.yaml  arcgis_water_service.yaml  arcgis_zoning_infill.yaml  arcgis_zoning_infill_extended.yaml  arcgis_zoning_overlays.yaml  arcgis_zoning_overlays_extended.yaml  arcgis_zoning_tod.yaml  austin_boa_cases.yaml  austin_brownfields.yaml  austin_floodplain.yaml  austin_permits.yaml  austin_wastewater_treated.yaml  austin_water_treated.yaml  austin_zoning_by_address.yaml  austin_zoning_cases.yaml  tcad_parcels.yaml
parcl/: __init__.py  address.py  cli.py  config.py  db.py  exporter.py  logger.py  models.py  profile.py
parcl/etl/: loader.py  pipeline.py  transformer.py
parcl/sources/: __init__.py  arcgis_source.py  base.py  csv_source.py  pdf_source.py  socrata_source.py
scripts/: bootstrap_db.py
sql/: schema.sql  views.sql
tests/: conftest.py  test_arcgis_source.py  test_config.py  test_loader.py  test_profile.py  test_socrata_source.py  test_transformer.py
